# cpp-course

./: README.md
big-hw/combinations-mk17ru/: .gitmodules  CMakeLists.txt  README.md
big-hw/combinations-mk17ru/etc/: combinations.xml
big-hw/combinations-mk17ru/include/: Combinations.h  Component.h
big-hw/combinations-mk17ru/src/: Combinations.cpp  Component.cpp  main.cpp
big-hw/genome-assembly-mk17ru/include/: genome.h  graph.h
big-hw/genome-assembly-mk17ru/src/: genome.cpp  graph.cpp
big-hw/randomized-queue-mk17ru/: CMakeLists.txt
big-hw/randomized-queue-mk17ru/include/: randomized_queue.h
big-hw/randomized-queue-mk17ru/src/: subset.cpp
big-hw/seam-carving-mk17ru/: CMakeLists.txt
big-hw/seam-carving-mk17ru/include/: Image.h  SeamCarver.h
big-hw/seam-carving-mk17ru/src/: Image.cpp  SeamCarver.cpp  main.cpp
small-hw/calc-numeral-systems/src/: calc.cpp
small-hw/monte-carlo-pi/: CMakeLists.txt  README.md
small-hw/monte-carlo-pi/include/: utils.h
small-hw/monte-carlo-pi/src/: main.cpp  utils.cpp
small-hw/monte-carlo-pi/test/: test.cpp
small-hw/ouch-executed-order/: CMakeLists.txt  README.md
small-hw/ouch-executed-order/include/: requests.h
small-hw/ouch-executed-order/src/: main.cpp  requests.cpp
small-hw/ouch-executed-order/test/: test.cpp
small-hw/sort-k-t/src/: main.cpp
